# ppelib

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  constants.h  main.c  meson.build  meson_options.txt  pedit.c  pelib-certificate_table.c  pelib-certificate_table.h  pelib-header.c  pelib-header.h  pelib-section.c  pelib-section.h  utils.c  utils.h
.github/workflows/: ci.yml
fuzz/: fuzz-test.c  fuzz.c  meson.build
generator/: generate-files.py  generate-private.py  generate-public.py  generator.py  meson.build
generator/structures/: coff_symbol.yaml  dos_header.yaml  export_directory_table.yaml  header.yaml  import_directory_table.yaml  section.yaml  vlv_signature.yaml
generator/templates/: getset_structure.c  header_deserialize.c  header_serialize.c  pelib-certificate_table.c  pelib-certificate_table.h  pelib-header.c  pelib-header.h  pelib-section.c  pelib-section.h  ppelib-certificate_table.c  ppelib-certificate_table.h  ppelib-header.c  ppelib-header.h  ppelib-section.c  ppelib-section.h  print-field-macro.jinja  print_structure.c  private_header.h  public-header-lowlevel.h  public-header.h  public_header.h  public_header_lowlevel.h  structure_deserialize.c  structure_serialize.c
include/: meson.build  pelib.h
include/pelib/: meson.build  pelib-constants.h  pelib-low-level.h  pelib.h  pelib_constants.h
include/ppelib/: meson.build  ppelib-constants.h  ppelib-data-directory-lowlevel.h  ppelib-data-directory.h  ppelib-low-level.h  ppelib-resource-table.h  ppelib.h
src/: data_directory.c  data_directory_private.h  dllmain.c  dos_header.c  dos_header.h  export.h  header.c  main.c  main.h  meson.build  pelib-error.c  pelib-error.h  pelib-generated.h  platform.h  ppe_error.c  ppe_error.h  ppelib-certificates.c  ppelib-error.c  ppelib-error.h  ppelib-generated.h  ppelib-handles.c  ppelib-headers.c  ppelib-internal.h  ppelib-resource-table.c  ppelib-sections.c  ppelib_internal.h  section.c  string_table.c  string_table_private.h  thread_local.h  utils.c  utils.h  vlv_signature.c
src/dos_header/: dos_header.c  rich_table.c  rich_table.h  vlv_signature.c
src/header/: header.c  import_table.c  import_table.h
test/: content-roundtrip.c  header-roundtrip.c  meson.build  parse-roundtrip.c  print-header.c  print-resource-table.c  remove-rich-table.c  remove-signature.c  remove-vlv-signature.c  resource-table-roundtrip.c  test.c
